actualizacion de html, stilos en boton borrar.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Mis Notas</h1>
-        <div class="new-note">
+        <div class="container">
+            <h1>Mis Notas</h1>
             <textarea id="note-input" placeholder="Algo para recordar..."></textarea>
             <button id="add-note">Crear</button>
+            <div id="notes-list"></div>
         </div>
-        <div class="notes-list" id="notes-list">
-        </div>
-    </div>
     <script src="app.js"></script>
 </body>
 </html>
